# skeleton-engine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/scripts/: actorTest.lua  config.lua  test_state.lua
cmake/: AssetManagement.cmake  ExeTargetCommon.cmake
games/: CMakeLists.txt
games/conway/: CMakeLists.txt
games/conway/include/: GameOfLifeNode.hpp  SimulationScene.hpp  TestScene.hpp
games/conway/src/: Game.cpp  SimulationScene.cpp  TestScene.cpp  main.cpp
include/: Actor.hpp  AnimationManager.hpp  AssetManager.hpp  Components.hpp  ConsoleWidget.hpp  DrawableNode.hpp  Engine.hpp  Game.hpp  GameData.hpp  GameState.hpp  IRenderer.hpp  ISceneManager.hpp  InputManager.hpp  Logger.hpp  LuaHelper.hpp  LuaHelperFunctions.hpp  LuaScript.hpp  Node.hpp  Node2D.hpp  Nodes.hpp  OpenECS.hpp  Particles.hpp  RenderService.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  ScriptManager.hpp  Service.hpp  ServiceLocator.hpp  SkeletonAssetsManager.hpp  SkeletonRenderer.hpp  SkeletonSceneManager.hpp  SplashScene.hpp  SplashState.hpp  SpriteNode.hpp  Spritesheet.hpp  State.hpp  StateMachine.hpp  Systems.hpp  (+7 more)
scripts/: MetaData.lua  actorTest.lua  bones.lua  game.lua  metadata.lua  player.lua  testing.lua
skeleton/: CMakeLists.txt
skeleton/include/skeleton/Core/: Engine.hpp  Guid.hpp  ISceneManager.hpp  Logger.hpp  Resource.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  Service.hpp
skeleton/include/skeleton/Graphics/: IRenderer.hpp  Renderer.hpp  ResourceManager.hpp  TextureResource.hpp  resource.hpp
skeleton/include/skeleton/Nodes/: DrawableNode.hpp  Node.hpp  Node2D.hpp  Particles.hpp  SpriteNode.hpp
skeleton/src/Core/: Engine.cpp  Logger.cpp  ResourceManager.cpp  SceneManager.cpp
skeleton/src/Graphics/: Renderer.cpp  ResourceManager.cpp
src/: Actor.cpp  AnimationManager.cpp  AssetManager.cpp  Engine.cpp  Game.cpp  GameData.cpp  GameState.cpp  InputManager.cpp  Logger.cpp  LuaHelperFunctions.cpp  LuaScript.cpp  Renderer.cpp  ResourceManager.cpp  SceneManager.cpp  ScriptManager.cpp  Service.cpp  SkeletonAssetsManager.cpp  SkeletonRenderer.cpp  SkeletonSceneManager.cpp  SplashScene.cpp  SplashState.cpp  Spritesheet.cpp  StateMachine.cpp  TestScene.cpp  TestState.cpp  main.cpp
